--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -115,6 +115,14 @@ body {
     
     --ring: 0 0% 80%;
     --radius: 0.5rem;
+    --sidebar-background: 0 0% 98%;
+    --sidebar-foreground: 240 5.3% 26.1%;
+    --sidebar-primary: 240 5.9% 10%;
+    --sidebar-primary-foreground: 0 0% 98%;
+    --sidebar-accent: 240 4.8% 95.9%;
+    --sidebar-accent-foreground: 240 5.9% 10%;
+    --sidebar-border: 220 13% 91%;
+    --sidebar-ring: 217.2 91.2% 59.8%;
   }
 
   .dark {
@@ -147,6 +155,22 @@ body {
     --destructive-foreground: 0 0% 100%;
     
     --ring: 0 0% 20%;
+    
+    --sidebar-background: 240 5.9% 10%;
+    
+    --sidebar-foreground: 240 4.8% 95.9%;
+    
+    --sidebar-primary: 224.3 76.3% 48%;
+    
+    --sidebar-primary-foreground: 0 0% 100%;
+    
+    --sidebar-accent: 240 3.7% 15.9%;
+    
+    --sidebar-accent-foreground: 240 4.8% 95.9%;
+    
+    --sidebar-border: 240 3.7% 15.9%;
+    
+    --sidebar-ring: 217.2 91.2% 59.8%;
   }
 }
 
